--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ nav a {
 h1 {
     color: steelblue;
 }
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
@@ -18,5 +18,27 @@ img {
     box-shadow: 0 0 30px grey;
 }
 p {
-    padding: 10px;
+    padding: 0;
+}
+main {
+    max-width: 840px;
+}
+aside {
+    width: 16rem;
+    margin: .5rem;
+    border: 4px solid rgba(0,0,0,0.3);
+    padding: 1rem;
+    background-color: #301934;
+    color: #feffec;
+    text-align: center;
+}
+aside img {
+    width: 200px;
+    height: auto;
+    box-shadow: 0 0 5px white;
+}
+footer {
+    margin-top: 2rem;
+    border-top: 2px solid;
+    text-align: center;
 }
