--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -49,3 +49,64 @@ a{
 .hero p{
     margin: 1rem;
 }
+header{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    border-bottom: 5px solid var(--secondary-color);
+}
+header img{
+    padding-left: 50px;
+}
+nav{
+    display: flex;
+    text-align: right;
+    justify-content: space-around;
+    margin-right: 2rem;
+    font-size: 2rem;
+}
+body{
+    background-color: #002b3d;
+}
+.history {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 0.2fr 1fr;
+
+}
+.history h2{
+    grid-column: 1/4;
+    text-align: center;
+}
+.history img{
+    width: 80%;
+    height: auto;
+}
+.adventure{
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    grid-template-rows: 1fr 2fr 1fr;
+}
+.adventure h2{
+    grid-column: 1/6;
+    text-align: center;
+}
+.adventure img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+figcaption{
+    color: var(--accent1-color);
+    font: var(--text-font);
+    text-align: center;
+}
+footer{
+    border-top: 5px solid var(--secondary-color);
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    align-items: center;
+}
+.sociallinks{
+    padding-top: 5px;
+}
