--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,7 +3,7 @@
     --secondary-color: #3b3561;
     --accent1-color: #ead94c;
     --accent2-color: #0098d9;
-    --heading-font: 'merienda',serif;
+    --heading-font: 'fredericka the great','merienda',serif;
     --text-font: 'roboto',sans-serif
 }
 p{
@@ -13,14 +13,26 @@ p{
 h1,h2,h3,h4,h5,h6{
     font-family: var(--heading-font);
     color: var(--primary-color);
-    font-size: 2rem;
+    font-size: 2.5rem;
+}
+h3{
+    font-size: 1rem;
+}
+nav a{
+    color: var(--accent1-color);
+    padding: 1rem;
 }
 a{
     text-decoration: none;
-    color: var(--accent1-color);
 }
-.content{
+.headerlinks :hover{
+    color: #002b3d;
+    background-color: var(--accent1-color);
+    border-radius: 1rem;
+}
+header, main, footer{
     width: 1024px;
+    margin: 0 auto;
 }
 .hero{
     position: relative;
@@ -32,14 +44,18 @@ a{
 }
 .hero h1{
     position: absolute;
-    left: 300px;
-    top: 5px;
+    left: 2em;
+    right: 2em;
+    top: 1em;
+    text-align: center;
 }
 .hero article{
     position: absolute;
-    bottom: 0;
-    background-color: var(--secondary-color);
-    opacity: 0.8;
+    bottom: 2rem;
+    left: 2rem;
+    right: 2rem;
+    background-color: #3b3561b2;
+    padding: 1rem;
 }
 .hero article img{
     width: 25%;
@@ -51,12 +67,12 @@ a{
 }
 header{
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 10rem auto;
     align-items: center;
     border-bottom: 5px solid var(--secondary-color);
 }
 header img{
-    padding-left: 50px;
+    width: 100%;
 }
 nav{
     display: flex;
@@ -64,15 +80,16 @@ nav{
     justify-content: space-around;
     margin-right: 2rem;
     font-size: 2rem;
+    font-family: var(--heading-font);
 }
 body{
     background-color: #002b3d;
 }
 .history {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2fr 2fr 2fr;
     grid-template-rows: 0.2fr 1fr;
-
+    gap: 2rem;
 }
 .history h2{
     grid-column: 1/4;
@@ -84,12 +101,15 @@ body{
 }
 .adventure{
     display: grid;
-    grid-template-columns: repeat(5, auto);
-    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 2rem;
 }
 .adventure h2{
     grid-column: 1/6;
     text-align: center;
+}
+figure{
+    margin: 0;
 }
 .adventure img{
     width: 100%;
@@ -106,7 +126,98 @@ footer{
     display: grid;
     grid-template-columns: 3fr 1fr;
     align-items: center;
+    margin-top: 4rem;
+    padding: 1rem;
 }
 .sociallinks{
     padding-top: 5px;
+}
+.team{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+.team img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.team h1{
+    grid-column: 1/4;
+    text-align: center;
+}
+.contactinformation{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    justify-content: center;
+}
+.contactinformation h2{
+    grid-column: 1/3;
+    text-align: center;
+}
+form{
+    width: 650px;
+    margin: 0 auto;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 1rem;
+    display: grid;
+    background-color: #3b3561;
+    color: #ead94c;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+legend{
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    text-align: center;
+}
+legend, label, input, button, select, textarea{
+    font-family: "roboto";
+}
+input, textarea{
+    padding: 0.5rem;
+    font-size: 1.1rem;
+}
+input[type="checkbox"]{
+    margin: 10px;
+}
+button{
+    margin: 1rem auto 1rem;
+    border-radius: 1rem;
+    padding: 1rem;
+    font-size: 1rem;
+    border: none;
+}
+button:hover {
+    background-color: var(--primary-color);
+}
+.contact{
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    gap: 1rem;
+}
+.form h2{
+    text-align: center;
+}
+.formitem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+.radio {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+}
+.message{
+    display: grid;
+    margin-top: 1rem;
+    width: 80%;
+}
+fieldset{
+    border: none;
 }
